Convert mixins for fabric events to ASM